<resources>
    <string name="app_name">Sensor Event Manageger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_test">START TEST</string>
    <string name="finish_test">FINISH TEST</string>

    <string name="sign_up">Sign Up</string>
    <string name="create_acc">Create A New Account</string>
    <string name="login">Login To Your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_psswd">Forgot Password?</string>
    <string name="logout">Log Out</string>
    <string name="email">Email</string>
</resources>